K8s/Jenkins/statefulset/service-ClusterIP-Headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-headless
  namespace: devops-tools
spec:
  selector: 
    app: jenkins-server
  clusterIP: None  
  ports:
    - name: httpport
      port: 8080
      targetPort: 8080
    - name: jnlpport
      port: 50000
      targetPort: 50000
