K8s/Jenkins/statefulset/service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  namespace: devops-tools
spec:
  selector: 
    app: jenkins-server
  type: NodePort  
  ports:
    - name: httpport
      port: 8080
      targetPort: 8080
      nodePort: 32000
    - name: jnlpport
      port: 50000
      targetPort: 50000
